[metadata]
name = faisal
version = 0.0.1
author = Faisal Lawan Muhammad
author_email = Faisallawan1997@gmail.com
description = Faisal
long_description = Faisal
long_description_content_type = text/markdown
url = https://github.com/Faisallm/faysal
project_urls =
    Bug Tracker = package issues url
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src